# web-rts-nomads

./: .gitignore  CLAUDE.MD  Makefile  README.md  build.cmd  build.ps1  dev.ps1  nomads-steamnet-stats.bat  nomads-steamnet-stats.ps1  package-lock.json  start.bat  stop.bat  test-steam.ps1
.claude/: settings.json
.claude/agents/: game-architect.md  go-backend-engineer.md  qa-engineer.md  vue-frontend-engineer.md
.claude/implementation_docs/: player_alliance_followup.md  player_orders_and_targeting.md  twin-bronze-spec.md
.claude/rules/: AI_RULES.md
.claude/skills/build-nomads/: SKILL.md
.claude/style_guide/: pixel_art_portrait_guide.md  pixel_art_style_guide.md
.github/workflows/: ci.yml
client/src/game-portal/: .env.example  index.html  package-lock.json  package.json  vite.config.ts  vite.config.ts.timestamp-1784053267884-ee2263ca7f7d6.mjs
desktop/: README.md
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/icons/: icon.icns
desktop/src-tauri/permissions/: default.toml
desktop/src-tauri/src/: ipc.rs  lib.rs  logs.rs  main.rs  migration.rs  settings.rs  steam.rs  steam_net.rs  supervisor.rs  userdata.rs
docs/: multiplayer-debug-cleanup.md
docs/design/: ability_perk_interaction.md  acolyte_and_systems.md  apprentice_and_systems.md  caster_archetype.md  death_and_corpses.md
docs/superpowers/plans/: 2026-05-15-wave-upgrades.md  2026-05-18-enemy-objective-attack-move.md  2026-05-19-switchable-xp-systems.md  2026-05-19-unit-build-requirements.md  2026-05-26-neutral-spawns-plan.md  2026-05-27-neutral-camp-loot-drops-plan.md  2026-06-22-claim-zone-capture-points.md  2026-06-22-zone-capture-requirements-hud.md  2026-06-23-mp-recap-and-dominion-points.md  2026-06-30-elemental-item-mechanics.md  2026-06-30-recipe-crafting-client-ui.md  2026-06-30-recipe-crafting-server.md  2026-07-01-conquest-badges.md  2026-07-01-craft-tab-match-menu.md  2026-07-01-objective-first-completion-dominion-reward.md  2026-07-06-proc-effects.md  2026-07-07-dodge-block-shields.md  2026-07-08-arch-mage-meteor-spell.md  2026-07-09-item-editor-client.md  2026-07-09-item-editor-server.md  2026-07-12-playtest-ingame-hud.md  2026-07-12-shared-ingame-hud.md  2026-07-12-unit-types-editor.md  2026-07-12-world-editor-shell.md  2026-07-13-abilities-editor.md  2026-07-13-ability-icon-picker.md  2026-07-13-effects-editor.md  2026-07-13-projectiles-editor.md  2026-07-13-standalone-perks-sp1.md  2026-07-13-standalone-perks-sp2.md  2026-07-13-unit-types-editor-v2-phase1.md  2026-07-13-unit-types-editor-v2-phase2.md  2026-07-13-unit-types-editor-v2-phase3.md  2026-07-13-unit-types-editor-v2-phase4.md  2026-07-13-unit-types-editor-v2-phase5a-backend.md  2026-07-13-unit-types-editor-v2-phase5b-client.md  2026-07-15-composable-abilities-phase2.md  2026-07-15-composable-abilities-phase3.md  2026-07-15-composable-abilities-phase4.md  2026-07-15-composable-abilities-phase5a.md  (+15 more)
docs/superpowers/specs/: 2026-05-15-wave-upgrades-design.md  2026-05-17-standalone-desktop-app-design.md  2026-05-17-standalone-desktop-app-playtest-checklist.md  2026-05-18-enemy-objective-attack-move-design.md  2026-05-19-switchable-xp-systems-design.md  2026-05-19-unit-build-requirements-design.md  2026-05-24-witherborne-units-design.md  2026-05-26-neutral-spawns-design.md  2026-05-27-neutral-camp-loot-drops-design.md  2026-06-16-capture-triggered-spawns-design.md  2026-06-22-claim-zone-capture-points-design.md  2026-06-22-worker-advancements-design.md  2026-06-22-zone-capture-requirements-hud.md  2026-06-24-map-versioning-p2p-sync-design.md  2026-06-24-unit-ground-shadows-design.md  2026-06-26-content-addressed-map-distribution-design.md  2026-06-26-in-match-music-design.md  2026-06-30-equipment-recipe-crafting-design.md  2026-07-01-craft-tab-match-menu-design.md  2026-07-01-objective-first-completion-dominion-reward-design.md  2026-07-06-proc-effects-design.md  2026-07-07-dodge-block-shields-design.md  2026-07-09-item-editor-design.md  2026-07-12-playtest-ingame-hud-design.md  2026-07-12-shared-ingame-hud-design.md  2026-07-12-unit-types-editor-design.md  2026-07-12-world-editor-shell-design.md  2026-07-13-abilities-editor-design.md  2026-07-13-ability-icon-picker-design.md  2026-07-13-effects-editor-design.md  2026-07-13-projectiles-editor-design.md  2026-07-13-standalone-perks-sp1-design.md  2026-07-13-standalone-perks-sp2-design.md  2026-07-13-unit-types-editor-v2-design.md  2026-07-15-composable-abilities-design.md  (+3 more)
openspec/specs/enemy-ai/: spec.md
server/: .air.toml  CTempwithfix_fails.txt  README.md  build.bat  dev.bat  go.mod  run-api.ps1
server/profiles/: 6af5dcd1-eac2-4a02-91c5-3a5aef5b5d97.json  98434118-1459-456b-8f0a-c398a9c70f28.json  98434118-1459-456b-8f0a-c398a9c70f28.json.bak  bad7a19c-6368-439a-a4a0-1bc18bb2c238.json  bad7a19c-6368-439a-a4a0-1bc18bb2c238.json.bak
server/scripts/: item-editor-smoke.sh
(+1720 files in other folders)
