# Pinned exact versions per §18 task 18.4 and the desktop-shell spec
# "Tauri and steamworks-rs versions are pinned". Update intentionally: bump the
# specific number and document the reason in the PR.

[package]
name = "nomads-desktop"
version = "0.1.0"
edition = "2021"
description = "Tauri shell for the Nomads desktop build"
authors = ["Nomads"]
publish = false

[lib]
name = "nomads_desktop_lib"
# rlib only — staticlib/cdylib are for mobile (iOS/Android Tauri targets) and
# aren't used on desktop. Keeping them around produced a separate .dll
# artefact whose feature set could drift from the binary's, which caused a
# subtle bug where `cargo build --features steam` produced a Steam-enabled
# rlib but the binary at target/release/ was the wrong artefact.
crate-type = ["rlib"]

[build-dependencies]
# Pinned exact versions per §18 task 18.4 and the desktop-shell spec
# "Tauri and steamworks-rs versions are pinned". To update: bump the specific
# number, run `cargo update`, and explain the bump in the PR description.
tauri-build = { version = "=2.6.2", features = [] }

[dependencies]
tauri = { version = "=2.11.2", features = ["devtools"] }
tauri-plugin-shell = "=2.0.2"
serde = { version = "=1.0.228", features = ["derive"] }
serde_json = "=1.0.133"
log = "=0.4.22"
env_logger = "=0.11.5"
anyhow = "=1.0.93"
# tokio sync primitives — used by async Tauri commands that need to bridge
# Steam callbacks back to the JS invoke caller (one-shot channels). Tauri
# already pulls tokio in transitively; this gates the named features we use.
tokio = { version = "=1.41.1", features = ["sync"] }
# Steamworks SDK bindings — optional, gated by the `steam` feature so default
# builds and CI don't need the SDK installed. Enable with --features steam
# once STEAM_SDK_LOCATION is set per desktop/README.md.
steamworks = { version = "=0.13.1", optional = true }
# Cross-platform local sockets (Unix socket / Windows named pipe). Used for
# the Go-server ↔ Rust-shell IPC channel that exposes Steamworks (§8.3).
interprocess = { version = "=2.2.2", optional = true }
# Base64 encoding for Steam-peer-bytes inside JSON-Lines notifications
# (§12: peer_message / send_peer_message). Game payloads are JSON-text today
# but the wire is binary-safe; b64 keeps the IPC frame format opaque.
base64 = { version = "=0.22.1", optional = true }

[features]
# Default to non-shipped dev config: single-instance lock disabled for
# multi-window QA. Shipped builds enable the single-instance feature, which
# pulls in tauri-plugin-single-instance — that plugin is added in §9 (Rust
# shell single-instance + connect_lobby argv). For now the feature toggle
# is just a placeholder so the build matrix is unambiguous.
default = []
single-instance = []
# Enable Steamworks integration. Requires STEAM_SDK_LOCATION env var pointing
# to the Steamworks SDK at build time, and `desktop/src-tauri/steam_appid.txt`
# at runtime (containing 480 for development, your real appid for release).
# See desktop/README.md "Steamworks setup".
steam = ["dep:steamworks", "dep:interprocess", "dep:base64"]

[profile.release]
panic = "abort"     # surfaced via the panic hook in §22.7
codegen-units = 1
lto = true
incremental = false
opt-level = "s"
strip = true
